added pca code for isoreg

--- a/EMR Notebooks/iso_reg_pca.ipynb
+++ b/EMR Notebooks/iso_reg_pca.ipynb
@@ -16,7 +16,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>26</td><td>application_1606590675617_0027</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://ip-172-31-21-27.ec2.internal:20888/proxy/application_1606590675617_0027/\">Link</a></td><td><a target=\"_blank\" href=\"http://ip-172-31-20-93.ec2.internal:8042/node/containerlogs/container_1606590675617_0027_01_000001/livy\">Link</a></td><td>✔</td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>32</td><td>application_1606590675617_0033</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://ip-172-31-21-27.ec2.internal:20888/proxy/application_1606590675617_0033/\">Link</a></td><td><a target=\"_blank\" href=\"http://ip-172-31-26-250.ec2.internal:8042/node/containerlogs/container_1606590675617_0033_01_000001/livy\">Link</a></td><td>✔</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -67,13 +67,15 @@
     "import sys\n",
     "from pyspark.sql.types import DoubleType\n",
     "from pyspark.sql.functions import isnan, when, count, col\n",
+    "from pyspark.sql import DataFrame\n",
+    "from functools import reduce\n",
     "\n",
     "# Dependencies for Regression Algorithms:\n",
     "from pyspark.ml.feature import VectorAssembler\n",
     "from pyspark.ml.feature import PCA\n",
     "from pyspark.ml import Pipeline\n",
     "from pyspark.ml.evaluation import RegressionEvaluator\n",
-    "from pyspark.ml.regression import GBTRegressor"
+    "from pyspark.ml.regression import IsotonicRegression"
    ]
   },
   {
@@ -125,13 +127,14 @@
    "source": [
     "# Load train and test datasets form S3:\n",
     "\n",
+    "df = spark.read.parquet(\"s3://projectmlldsongs/songs_data_split_v2/type=full/\")\n",
     "train_df = spark.read.parquet(\"s3://projectmlldsongs/songs_data_split_v2/type=train/\")\n",
     "test_df = spark.read.parquet(\"s3://projectmlldsongs/songs_data_split_v2/type=test/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -150,133 +153,7 @@
     }
    ],
    "source": [
-    "## Gradient Boosted Trees Regression Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# Convert Rows of dataframe to Dense Vectors:\n",
-    "assembler = VectorAssembler(\n",
-    "    inputCols=['artist_familiarity','duration','loudness','key_confidence','key','end_of_fade_in',\n",
-    "               'time_signature_confidence','tempo','mode'],\n",
-    "    outputCol='features')\n",
-    "\n",
-    "# Create isotonic regression object\n",
-    "gbtreg = GBTRegressor(labelCol='song_hotttnesss', featuresCol='features')\n",
-    "\n",
-    "# Create a pipeline to sequentially perform operations on the training set:\n",
-    "pipeline = Pipeline(stages=[assembler, gbtreg])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# Perform 4-fold cross validation on the train dataset:\n",
-    "#paramGrid = ParamGridBuilder()\\\n",
-    "#    .addGrid(lr.regParam, [0.1, 0.01]) \\\n",
-    "#    .addGrid(lr.fitIntercept, [False, True])\\\n",
-    "#    .addGrid(lr.elasticNetParam, [0.0, 0.5, 1.0])\\\n",
-    "#    .build()\n",
-    "\n",
-    "#crossval = CrossValidator(estimator=pipeline,\n",
-    "#                          estimatorParamMaps=paramGrid,\n",
-    "#                          evaluator=RegressionEvaluator(metricName=\"rmse\",labelCol=\"song_hotttnesss\",predictionCol=\"prediction\"),\n",
-    "#                          numFolds=4)\n",
-    "\n",
-    "\n",
-    "#Train the model:\n",
-    "gbtmodel = pipeline.fit(train_df)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------------------+-------------------+--------------------+\n",
-      "|         prediction|    song_hotttnesss|            features|\n",
-      "+-------------------+-------------------+--------------------+\n",
-      "| 0.3249590647566196|0.37072581745115313|[0.17980200762801...|\n",
-      "|0.31813633984606104|0.47267074105300666|[0.20472576641280...|\n",
-      "|0.27628438838415964|0.29436661170797984|[0.23282408848570...|\n",
-      "|0.25817849232181717| 0.2998265465430795|[0.28032429498860...|\n",
-      "|0.26933839623541533|0.16485407266195046|[0.31256095971592...|\n",
-      "+-------------------+-------------------+--------------------+\n",
-      "only showing top 5 rows\n",
-      "\n",
-      "Root Mean Squared Error (RMSE) on test data = 0.0578572"
-     ]
-    }
-   ],
-   "source": [
-    "# Make predictions on test set\n",
-    "predictions = gbtmodel.transform(test_df)\n",
-    "\n",
-    "# Select example rows to display.\n",
-    "predictions.select(\"prediction\", \"song_hotttnesss\", \"features\").show(5)\n",
-    "\n",
-    "# Select (prediction, true label) and compute test error\n",
-    "evaluator = RegressionEvaluator(\n",
-    "    labelCol=\"song_hotttnesss\", predictionCol=\"prediction\", metricName=\"rmse\")\n",
-    "rmse = evaluator.evaluate(predictions)\n",
-    "\n",
-    "# Print RMSE:\n",
-    "print(\"Root Mean Squared Error (RMSE) on test data = %g\" % rmse)\n"
+    "##Isotonic Regression Model"
    ]
   },
   {
@@ -300,22 +177,105 @@
     }
    ],
    "source": [
-    "# Save trained model object in S3:\n",
-    "\n",
-    "gbtmodel.save(\"s3://projectmlldsongs/saved_models_v2/gbt_regression/\")"
+    "# Convert Rows of dataframe to Dense Vectors:\n",
+    "assembler = VectorAssembler(\n",
+    "    inputCols=['artist_familiarity','duration','loudness','key_confidence','key','end_of_fade_in',\n",
+    "            'time_signature_confidence','tempo','mode'],\n",
+    "    outputCol='features')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# PCA snippet: to be included later....\n",
+    "# List containing values of k:\n",
+    "pca_list = [1,2,3,4,5,6,7,8,9]\n",
     "\n",
-    "#pca = PCA(k=2, inputCol=\"features\",outputCol=\"features\")\n",
+    "# Empty list for storing rmse values:\n",
+    "rmse_list = []\n",
     "\n",
-    "# Add the pca object to Pipeline"
+    "for num_features in pca_list:\n",
+    "    \n",
+    "    # Define pca object:\n",
+    "    pca = PCA(k=num_features, inputCol=\"features\",outputCol=\"features_pca\")\n",
+    "    \n",
+    "    # Create a pipeline to sequentially perform operations on the training set:\n",
+    "    pipeline_pca = Pipeline(stages=[assembler, pca])\n",
+    "    \n",
+    "    # Fit pca model on full dataset:\n",
+    "    pcamodel = pipeline_pca.fit(df)\n",
+    "    \n",
+    "    # Apply pca on training data and test data:\n",
+    "    train_predictions = pcamodel.transform(train_df)\n",
+    "    pca_train_data = train_predictions.select(\"features_pca\",\"song_hotttnesss\")\n",
+    "    test_predictions = pcamodel.transform(test_df)\n",
+    "    pca_test_data = test_predictions.select(\"features_pca\",\"song_hotttnesss\")\n",
+    "    \n",
+    "    # Define isotonic regression model:\n",
+    "    isoreg = IsotonicRegression(labelCol='song_hotttnesss', featuresCol='features_pca')\n",
+    "    \n",
+    "    #Train model on lower-dimensional features:\n",
+    "    isomodel = isoreg.fit(pca_train_data)\n",
+    "    \n",
+    "    # Evaluate on test data:\n",
+    "    predictions = isomodel.transform(pca_test_data)\n",
+    "    \n",
+    "    # Select (prediction, true label) and compute test error\n",
+    "    evaluator = RegressionEvaluator(\n",
+    "        labelCol=\"song_hotttnesss\", predictionCol=\"prediction\", metricName=\"rmse\")\n",
+    "    \n",
+    "    rmse = evaluator.evaluate(predictions)\n",
+    "    \n",
+    "    # Store rmse value in a list:\n",
+    "    rmse_list.append(rmse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.094594581209568, 0.09459458120956801, 0.094594581209568, 0.09459458120956801, 0.09459458120956801, 0.094594581209568, 0.09459458120956801, 0.09459458120956801, 0.094594581209568]"
+     ]
+    }
+   ],
+   "source": [
+    "print(rmse_list)"
    ]
   }
  ],
